--- a/mybatis/alphademo/pom.xml
+++ b/mybatis/alphademo/pom.xml
@@ -29,6 +29,12 @@
 
         <dependency>
             <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.1.21</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
             <version>1.2.62</version>
         </dependency>
