--- a/mybatis/mybatis-spring-demo/pom.xml
+++ b/mybatis/mybatis-spring-demo/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.steamedfish.mybatis</groupId>
-    <artifactId>alpha-demo</artifactId>
+    <groupId>com.steamedfish.mybatis.spring</groupId>
+    <artifactId>mybatis-spring-demo</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -14,11 +14,35 @@
     </properties>
 
     <dependencies>
+
+        <!--region mybatis-->
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
             <version>3.5.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis-spring</artifactId>
+            <version>2.0.3</version>
+        </dependency>
+        <!--endregion-->
+
+        <!--region spring -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.2.2.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>5.2.2.RELEASE</version>
+        </dependency>
+        <!--endregion -->
+
+
+
 
         <dependency>
             <groupId>mysql</groupId>
@@ -40,19 +64,12 @@
         </dependency>
 
         <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
-        </dependency>
-
-        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.10</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
-
 
     <build>
         <plugins>
@@ -63,4 +80,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
