--- a/mybatis/mybatis-spring-demo/pom.xml
+++ b/mybatis/mybatis-spring-demo/pom.xml
@@ -42,7 +42,11 @@
         <!--endregion -->
 
 
-
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
 
         <dependency>
             <groupId>mysql</groupId>
