--- a/skeleton/email-demo/src/main/resources/application.properties
+++ b/skeleton/email-demo/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFact
 spring.mail.properties.toEmail=15927522625@163.com
 spring.mail.properties.fromPersonal=\u5B59\u6B63\u5B87
 
-# email scanner
-spring.mail.properties.scanner.host=pop.qq.com
+# email scanner   pop.qq.com  pop3
+spring.mail.properties.scanner.host=imap.qq.com
 spring.mail.properties.scanner.port=995
-spring.mail.properties.scanner.protocal=pop3
+spring.mail.properties.scanner.protocal=imap
 
