--- a/java/design_pattern_demo/pom.xml
+++ b/java/design_pattern_demo/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.szy.skill</groupId>
-    <artifactId>jdk8-op</artifactId>
+    <groupId>com.steamedfish.design</groupId>
+    <artifactId>design-pattern-demo</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -45,21 +45,11 @@
             <artifactId>slf4j-api</artifactId>
             <version>1.7.29</version>
         </dependency>
-
-        <dependency>
-            <groupId>org.openjdk.jmh</groupId>
-            <artifactId>jmh-core-benchmarks</artifactId>
-            <version>1.21</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
+
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -67,4 +57,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
