--- a/skeleton/email-demo/src/main/resources/application.properties
+++ b/skeleton/email-demo/src/main/resources/application.properties
@@ -1,15 +1,17 @@
 # email send
 spring.mail.host=smtp.qq.com
 spring.mail.port=465
-spring.mail.username=154962931@qq.com
-spring.mail.password=dsbvnflvaxuvcbdf
+spring.mail.username=3608867492@qq.com
+  # 154962931@qq.com
+spring.mail.password=oofignvsghvqdbgc
+  # dsbvnflvaxuvcbdf
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
 # \u591A\u90AE\u7BB1\u201C,\u201D\u5206\u5272
 spring.mail.properties.toEmail=15927522625@163.com
-spring.mail.properties.fromPersonal=\u5B59\u6B63\u5B87
+spring.mail.properties.fromPersonal=test
 
 # email scanner   pop.qq.com  pop3
 spring.mail.properties.scanner.host=imap.qq.com
